--- a/main.yml
+++ b/main.yml
@@ -89,6 +89,11 @@
   become: true
 
   tasks:
+  - name: create ansible tomcat directory
+    file:
+      path: /usr/share/tomcat/webapps/ansible
+      state: directory  
+
   - name: copy static index.html to tomcat webapps/ansible/index.html
     template:
       src: index.html.app1
@@ -100,6 +105,11 @@
   become: true
 
   tasks:
+  - name: create ansible tomcat directory
+    file:
+      path: /usr/share/tomcat/webapps/ansible
+      state: directory
+
   - name: copy static index.html to tomcat webapps/ansible/index.html
     template:
       src: index.html.app2
@@ -112,25 +122,30 @@
   hosts: appdbs
   tasks:
   - name: install progress
-    command: "yum install -y postgresql-server"
+    command: yum install -y postgresql-server
 
   #- name: install postgres
   #  yum:
   #    name: postgresql-server
   #    state: latest
-  - name: enable apache at boot
+  - name: enable postgresql at boot
     service:
       name: postgresql
       enabled: yes
   - name: tell user to finish setting up postgres
     debug:
-      msg: "Either uncomment the postgres setup or manually login and initialize"
+      msg: Either uncomment the postgres setup or manually login and initialize
 
  # only run the next 2 tasks once!
-#  - name: initilize postgres
-#    command: postgresql-setup initdb
+  - name: initilize postgres
+    command: postgresql-setup initdb
+    register: r_postgres_init
+    failed_when: >-
+      r_postgres_init.rc != 0 and
+      r_postgres_init.stdout != 'Data directory is not empty!'
 #  - name: initilize postgres some more
 #    command: chkconfig postgresql on
+
   - name: start postgres
     service:
       name: postgresql.service
